--- a/src/components/Terminal/TabBar.css
+++ b/src/components/Terminal/TabBar.css
@@ -93,8 +93,8 @@
 
 .tab__persistent-badge {
   font-size: 20px;
-  line-height: 0;
-  vertical-align: middle;
+  line-height: 1;
+  flex-shrink: 0;
   margin-left: 3px;
   opacity: 1;
   font-style: normal;
